# darkoperator-studio

./: .gitignore  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  CHANGELOG.md  CI_CD_SETUP.md  COMPREHENSIVE_LITERATURE_REVIEW_PHYSICS_INFORMED_NEURAL_OPERATORS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.production  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_RESEARCH_DEPLOYMENT_SUMMARY.md  FINAL_RESEARCH_PUBLICATION_PACKAGE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  RESEARCH_PUBLICATION_DRAFT.md  SDLC_COMPLETION_SUMMARY.json  TERRAGON_SDLC_V4_AUTONOMOUS_COMPLETION_REPORT.md  TERRAGON_SDLC_V4_AUTONOMOUS_FINAL_COMPLETION.json  TERRAGON_SDLC_V4_AUTONOMOUS_FINAL_COMPLETION.md  TERRAGON_SDLC_V4_COMPLETION_REPORT.md  TERRAGON_SDLC_V4_FINAL_COMPLETION.json  TERRAGON_SDLC_V4_FINAL_COMPLETION_REPORT.md  TERRAGON_SDLC_V4_FINAL_REPORT.md  TERRAGON_SDLC_V4_PROGRESSIVE_QUALITY_GATES_FINAL_REPORT.md  TERRAGON_SDLC_V4_RESEARCH_COMPLETION_REPORT.md  autonomous_comprehensive_quality_gates.py  autonomous_production_deployment_final.py  autonomous_quality_gates.py  autonomous_research_execution.py  autonomous_research_report.json  comprehensive_quality_gates.py  comprehensive_research_validation_execution.py  comprehensive_sdlc_validation.py  docker-compose.yml  environment.yml  final_production_deploy.py  final_quality_gates.py  finalize_production_deployment.py  gen1_novel_enhancements.py  (+43 more)
benchmarks/: quantum_planning_benchmarks.py
darkoperator/: __init__.py
deployment_artifacts/: Dockerfile  docker-compose-prod.yml  docker-compose.yml  k8s_deployment.yaml  (+6 more)
(+242 files in other folders)
